#537 documented